2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Added very preliminary support for 
	groups.

	* src/common.h: See above.

	* src/config.cpp: See above.

	* src/ldap_window.cpp: See above.

2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* pixmaps/gnomemeeting-logo.png: Made logo smaller.

2002-12-23 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Added key to enable/disable video 
	reception. Useful for dialup users.

	* src/common.h: Removed widgets for g.711 and GSM frames. Added widget
	for video reception.

	* src/config.cpp: Added notifier for video reception changes. Removed
	some of the notifiers for G.711 frames and GSM frames. They were 
	removed from the preferences, but still exist in GConf. They were
	not really useful for users, even for advanced users.

	* src/druid.cpp: Fixed bug reported by Fabrice Alphonso: the connection
	type is now remembered between sessions and settings are not broken
	when the druid is shown.

	* src/endpoint.cpp: Added code to support disabling video reception.

	* src/misc.cpp: Removed frames again.

	* src/pref_window.cpp: Improved window layout without frames anymore.

	* src/sound_handling.cpp: Applied patch that fixes mic selection
	when dsp0 is not present, thanks to Jonny Strom aka Johnny.

2002-12-22 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Fixed IPv6 detection stuff.

	* src/cleaner.cpp: Saves the local and remote video popup sizes
	before gtk_main_quit.

	* src/config.cpp: Changed notifier. People can now add/remove LDAP
	servers using gconf-editor with changes in real time, or of course
	using right-click menus.

	* src/endpoint.cpp: Fixed destructor.

	* src/ldap_window.cpp: See config.cpp.

	* src/ldap_window.h: Made gnomemeeting_init_ldap_notebook_add_page
	public.

	* src/main_window.cpp: Remove the functions that were saving the sizes
	of the local and remote video windows.
