@@ -1,3 +1,9 @@
+2002-12-24 Damien Sandras  <dsandras@seconix.com>
+
+	* src/callbacks.cpp, src/cleaner.cpp, src/cleaner.h,
+	  src/endpoint.cpp, src/gnomemeeting.cpp, src/gnomemeeting.h,
+	  src/main_window.cpp, src/misc.cpp: Fixed exit bug.
+
 2002-12-23 Damien Sandras  <dsandras@seconix.com>
 
 	* gnomemeeting.schemas.in.in: Added very preliminary support for 
